k8s/apps/muni/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: backend
          image: ghcr.io/slashnephy/muni-server:master@sha256:d448f2f62235dd269442c3c4d1819d9396f7dca3a7fd11ed55b4e0c0e94423fc
          ports:
            - containerPort: 7080
          securityContext:
            allowPrivilegeEscalation: false
        - name: envoy
          image: ghcr.io/slashnephy/muni-envoy:master@sha256:4f51d2bc1e7537217ba75c25e5a9ae75efc7fa5e9cdb7887918e8504df8d090e
          ports:
            - containerPort: 7090
          securityContext:
            allowPrivilegeEscalation: false
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
