k8s/apps/muni/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server

spec:
  selector:
    app: default
  ports:
    - name: "7090"
      port: 7090
      targetPort: 7090
      protocol: TCP
