k8s/apps/muni/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`vj-api.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`vj-api.starry.blue`)
      services:
        - name: app
          port: 7090
